--- a/catalog.html
+++ b/catalog.html
@@ -4,12 +4,14 @@
 <head>
   <meta charset="utf-8">
   <title>Html Academy: Нёрдс</title>
+  <link rel="icon" href="favicon.ico" />
+  <link rel="manifest" href="manifest.webmanifest" />
 </head>
 
 <body>
   <header>
     <a href="index.html">
-      <img src="https://via.placeholder.com/160x65" alt="logotype" />
+      <img src="img/logo.svg" width="160" height="65" alt="logotype" />
     </a>
     <nav>
       <ul>
@@ -91,7 +93,7 @@
             Строка браузера
           </p>
           <a href="#">
-            <img src="https://via.placeholder.com/359x578" alt="Sedona" />
+            <img src="img/img-sedona.jpg" width="359" height="578" alt="Sedona"/>
           </a>
           <p>
             Sedona<br>
@@ -104,7 +106,7 @@
             Строка браузера
           </p>
           <a href="#">
-            <img src="https://via.placeholder.com/358x578" alt="Pink" />
+            <img src="img/img-pink.jpg" width="358" height="578" alt="Pink"/>
           </a>
         </li>
         <li>
@@ -112,7 +114,7 @@
             Строка браузера
           </p>
           <a href="#">
-            <img src="https://via.placeholder.com/358x578" alt="Borodinsky" />
+            <img src="img/img-borodinsky.jpg" width="358" height="578" alt="Borodinsky"/>
           </a>
         </li>
         <li>
@@ -120,7 +122,7 @@
             Строка браузера
           </p>
           <a href="#">
-            <img src="https://via.placeholder.com/358x578" alt="Mishka" />
+            <img src="img/img-mishka.jpg" width="358" height="578" alt="Mishka"/>
           </a>
         </li>
         <li>
@@ -128,7 +130,7 @@
             Строка браузера
           </p>
           <a href="#">
-            <img src="https://via.placeholder.com/359x578" alt="Learning" />
+            <img src="img/img-aplus.jpg" width="359" height="578" alt="Aplus"/>
           </a>
         </li>
         <li>
@@ -136,7 +138,7 @@
             Строка браузера
           </p>
           <a href="#">
-            <img src="https://via.placeholder.com/359x578" alt="Кваст" />
+            <img src="img/img-kvast.jpg" width="359" height="578" alt="Kvast"/>
           </a>
         </li>
       </ul>
@@ -161,6 +163,7 @@
   </main>
   <section>
     <h2>Карта</h2>
+    <img src="img/map.png" widht="1440" height="416" alt="map" />
   </section>
   <section>
     <h3>Nёrds Design Studio</h3>
@@ -175,13 +178,13 @@
     <h2>Контакты</h2>
     <ul>
       <li>
-        <a href="#"><img src="https://via.placeholder.com/25x25" alt="vkontakte" /></a>
+        <a href="#"><img src="img/vk-icon.svg" width="21" height="15" alt="vk" /></a>
       </li>
       <li>
-        <a href="#"><img src="https://via.placeholder.com/25x25" alt="facebook" /></a>
+        <a href="#"><img src="img/fb-icon.svg" width="12" height="22" alt="facebook" /></a>
       </li>
       <li>
-        <a href="#"><img src="https://via.placeholder.com/25x25" alt="instagram" /></a>
+        <a href="#"><img src="img/inst-icon.svg" width="21" height="21" alt="instagram" /></a>
       </li>
     </ul>
     <p>Давайте дружить, это выгодно!</p>
