--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
 <head>
   <meta charset="utf-8">
   <title>Html Academy: Нёрдс</title>
+  <link rel="icon" href="favicon.ico" />
+  <link rel="manifest" href="manifest.webmanifest" />
 </head>
 
 <body>
   <header>
     <a>
-      <img src="https://via.placeholder.com/160x65" alt="logotype" />
+      <img src="img/logo.svg" width="160" height="65" alt="logotype" />
     </a>
     <nav>
       <ul>
@@ -31,7 +33,7 @@
         для вашего сайта или мобильного приложения.
       </p>
       <a href="blank.html">Узнать больше</a>
-      <img src="https://via.placeholder.com/" alt="animation" />
+      <img src="img/slider.png" width="760" height="431" alt="animation" />
     </section>
   </header>
   <main>
@@ -41,7 +43,7 @@
       <ul>
         <li>
           <h3>Веб-сайты</h3>
-          <img src="https://via.placeholder.com/300x150" alt="sites" />
+          <img src="img/all-sites.png" width="300" height="146" alt="sites" />
           <p>
             Мир никогда не будет прежним<br />
             после того как увидит ваш сайт!
@@ -50,7 +52,7 @@
         </li>
         <li>
           <h3>Приложения</h3>
-          <img src="https://via.placeholder.com/300x150" alt="apps" />
+          <img src="img/apps.png" width="300" height="146" alt="apps" />
           <p>
             Покорите топ-10 приложений<br />
             в AppStore и Google Play
@@ -59,7 +61,7 @@
         </li>
         <li>
           <h3>Презентации</h3>
-          <img src="https://via.placeholder.com/300x150" alt="presentation" />
+          <img src="img/presentations.png" width="300" height="146" alt="presentations" />
           <p>
             Вы даже не подозреваете,<br />
             насколько вы изумительны!
@@ -84,7 +86,7 @@
         <li>Мобильных приложений для iOS и Android</li>
         <li>Слайдшоу и видео для корпоративных презентаций</li>
       </ul>
-      <p><img src="https://via.placeholder.com/360x200" alt="nerds-illustration 1" /></p>
+      <p><img src="img/nerds-illustration.png" width="360" height="208" alt="nerds-illustration" /></p>
       <p>С 2004 года любим точность во всём:</p>
       <ul>
         <li>
@@ -104,14 +106,15 @@
     <section>
       <h2>Партнёры</h2>
       <ul>
-        <li><img src="https://via.placeholder.com/200x70" alt="htmlacademy" /></li>
-        <li><img src="https://via.placeholder.com/200x70" alt="borodinski" /></li>
-        <li><img src="https://via.placeholder.com/200x70" alt="pink" /></li>
-        <li><img src="https://via.placeholder.com/200x70" alt="mishka" /></li>
+        <li><img src="img/htmlacademy.svg" width="199" height="68" alt="htmlacademy" /></li>
+        <li><img src="img/borodinski.svg" width="209" height="90" alt="borodinski" /></li>
+        <li><img src="img/pink.svg" width="185" height="52" alt="pink" /></li>
+        <li><img src="img/mishka.svg" width="173" height="84" alt="mishka" /></li>
       </ul>
     </section>
     <section>
       <h2>Карта</h2>
+      <img src="img/map.png" widht="1440" height="416" alt="map" />
     </section>
     <section>
       <h3>Nёrds Design Studio</h3>
@@ -129,13 +132,13 @@
     <h2>Контакты</h2>
     <ul>
       <li>
-        <a href="#"><img src="https://via.placeholder.com/25x25" alt="vk" /></a>
+        <a href="#"><img src="img/vk-icon.svg" width="21" height="15" alt="vk" /></a>
       </li>
       <li>
-        <a href="#"><img src="https://via.placeholder.com/25x25" alt="facebook" /></a>
+        <a href="#"><img src="img/fb-icon.svg" width="12" height="22" alt="facebook" /></a>
       </li>
       <li>
-        <a href="#"><img src="https://via.placeholder.com/25x25" alt="instagram" /></a>
+        <a href="#"><img src="img/inst-icon.svg" width="21" height="21" alt="instagram" /></a>
       </li>
     </ul>
     <p>Давайте дружить, это выгодно!</p>
