--- a/index.html
+++ b/index.html
@@ -6,143 +6,167 @@
   <title>Html Academy: Нёрдс</title>
   <link rel="icon" href="favicon.ico" />
   <link rel="manifest" href="manifest.webmanifest" />
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-  <header>
-    <a>
+  <header class="main__header">
+    <a class="main__header__logo">
       <img src="img/logo.svg" width="160" height="65" alt="logotype" />
     </a>
-    <nav>
-      <ul>
+    <nav class="navigation">
+      <ul class="navigation__menu">
         <li><a href="blank.html">Студия</a></li>
         <li><a href="blank.html">Клиенты</a></li>
         <li><a href="catalog.html">Магазин</a></li>
         <li><a href="blank.html">Контакты</a></li>
       </ul>
     </nav>
-    <a href="blank.html">Корзина</a>
+    <a class="basket" href="blank.html">Корзина</a>
     <section>
       <h2>Слайдер</h2>
-      <p>
+      <p class="slider__slogan">
         Долго, дорого,<br />
         скрупулезно.
       </p>
-      <p>
+      <p class="slider__text">
         Математически выверенный дизайн<br />
         для вашего сайта или мобильного приложения.
       </p>
-      <a href="blank.html">Узнать больше</a>
+      <a class="button button--red" href="blank.html">Узнать больше</a>
       <img src="img/slider.png" width="760" height="431" alt="animation" />
     </section>
   </header>
-  <main>
+  <main class="main__content">
     <h1>Нёрдс — дизайн-студия</h1>
-    <section>
+    <section class="offers">
       <h2>Предложения</h2>
-      <ul>
-        <li>
+      <ul class="offers__list">
+        <li class="offers__list__item">
           <h3>Веб-сайты</h3>
           <img src="img/all-sites.png" width="300" height="146" alt="sites" />
-          <p>
+          <p class="offers__list__item__text">
             Мир никогда не будет прежним<br />
             после того как увидит ваш сайт!
           </p>
-          <a href="blank.html">Заказать</a>
+          <a class="button button--red" href="blank.html">Заказать</a>
         </li>
-        <li>
+        <li class="offers__list__item">
           <h3>Приложения</h3>
           <img src="img/apps.png" width="300" height="146" alt="apps" />
-          <p>
+          <p class="offers__list__item__text">
             Покорите топ-10 приложений<br />
             в AppStore и Google Play
           </p>
-          <a href="blank.html">Заказать</a>
+          <a class="button button--green" href="blank.html">Заказать</a>
         </li>
-        <li>
+        <li class="offers__list__item">
           <h3>Презентации</h3>
           <img src="img/presentations.png" width="300" height="146" alt="presentations" />
-          <p>
+          <p class="offers__list__item__text">
             Вы даже не подозреваете,<br />
             насколько вы изумительны!
           </p>
-          <a href="blank.html">Заказать</a>
+          <a class="button button--yellow" href="blank.html">Заказать</a>
         </li>
       </ul>
     </section>
-    <section>
+    <section class="description">
       <h2>Описание</h2>
-      <p>
+      <p class="description__slogan">
         Мы — маленькая, но гордая<br />
         дизайн-студия из Краснодара
       </p>
-      <p>
+      <p class="description__text">
         Исповедуем принципы минимализма и чистоты. Ставим математический расчёт<br />
         превыше креатива. Работаем не покладая рук, как роботы.
       </p>
-      <p>выполняем заказы на разработку</p>
-      <ul>
-        <li>Веб-сайтов любой сложности</li>
-        <li>Мобильных приложений для iOS и Android</li>
-        <li>Слайдшоу и видео для корпоративных презентаций</li>
+      <p class="description__advantages">выполняем заказы на разработку</p>
+      <ul class="description__advantages__list">
+        <li class="description__advantages__list__item">Веб-сайтов любой сложности</li>
+        <li class="description__advantages__list__item">Мобильных приложений для iOS и Android</li>
+        <li class="description__advantages__list__item">Слайдшоу и видео для корпоративных презентаций</li>
       </ul>
       <p><img src="img/nerds-illustration.png" width="360" height="208" alt="nerds-illustration" /></p>
-      <p>С 2004 года любим точность во всём:</p>
-      <ul>
-        <li>
-          <p>146<span>%</span></p>
-          <p>Уровень самоотдачи</p>
+      <p class="description__advantages__quality">С 2004 года любим точность во всём:</p>
+      <ul class="description__advantages__quality__list">
+        <li class="description__advantages__quality__list__item">
+          <p class="quality__list__item__numbers">146<span class="quality__list__item__percent">%</span></p>
+          <p class="quality__list__item__text">Уровень самоотдачи</p>
         </li>
-        <li>
-          <p>100<span>%</span></p>
-          <p>Соблюдение сроков</p>
+        <li class="description__advantages__quality__list__item">
+          <p class="quality__list__item__numbers">100<span class="quality__list__item__percent">%</span></p>
+          <p class="quality__list__item__text">Соблюдение сроков</p>
         </li>
-        <li>
-          <p>50<span>%</span></p>
-          <p>Минимальная предоплата</p>
+        <li class="description__advantages__quality__list__item">
+          <p class="quality__list__item__numbers">50<span class="quality__list__item__percent">%</span></p>
+          <p class="quality__list__item__text">Минимальная предоплата</p>
         </li>
       </ul>
     </section>
-    <section>
+    <section class="partners">
       <h2>Партнёры</h2>
-      <ul>
-        <li><img src="img/htmlacademy.svg" width="199" height="68" alt="htmlacademy" /></li>
-        <li><img src="img/borodinski.svg" width="209" height="90" alt="borodinski" /></li>
-        <li><img src="img/pink.svg" width="185" height="52" alt="pink" /></li>
-        <li><img src="img/mishka.svg" width="173" height="84" alt="mishka" /></li>
+      <ul class="partners__list">
+        <li>
+          <a href="#">
+            <img src="img/htmlacademy.svg" width="199" height="68" alt="htmlacademy" />
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="img/borodinski.svg" width="209" height="90" alt="borodinski" />
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="img/pink.svg" width="185" height="52" alt="pink" />
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="img/mishka.svg" width="173" height="84" alt="mishka" />
+          </a>
+        </li>
       </ul>
     </section>
-    <section>
+    <section class="map">
       <h2>Карта</h2>
       <img src="img/map.png" widht="1440" height="416" alt="map" />
     </section>
-    <section>
-      <h3>Nёrds Design Studio</h3>
-      <p>
+    <section class="contacts">
+      <h3 class="contacts__title">Nёrds Design Studio</h3>
+      <p class="contacts__address">
         191186, Санкт-Петербург<br />
         ул. Б. Конюшенная, д. 19/8
       </p>
-      <p>
+      <p class="contacts__phone">
         <a href="tel:+78122757575">тел. +7 (812) 275-75-75</a>
       </p>
-      <a href="blank.html">Напишите нам</a>
+      <a class="button button--red" href="blank.html">Напишите нам</a>
     </section>
   </main>
-  <footer>
+  <footer class="main__footer">
     <h2>Контакты</h2>
-    <ul>
-      <li>
-        <a href="#"><img src="img/vk-icon.svg" width="21" height="15" alt="vk" /></a>
-      </li>
-      <li>
-        <a href="#"><img src="img/fb-icon.svg" width="12" height="22" alt="facebook" /></a>
-      </li>
-      <li>
-        <a href="#"><img src="img/inst-icon.svg" width="21" height="21" alt="instagram" /></a>
-      </li>
+    <ul class="social__list">
+      <a href="#">
+        <li class="social__list__item">
+          <img src="img/vk-icon.svg" width="21" height="15" alt="vk" />
+        </li>
+      </a>
+      <a href="#">
+        <li class="social__list__item">
+          <img src="img/fb-icon.svg" width="12" height="22" alt="facebook" />
+        </li>
+      </a>
+      <a href="#">
+        <li class="social__list__item">
+          <img src="img/inst-icon.svg" width="21" height="21" alt="instagram" />
+        </li>
+      </a>
     </ul>
-    <p>Давайте дружить, это выгодно!</p>
-    <p>Скидка 10% для друзей из социальных сетей.</p>
+    <p class="footer__offer">Давайте дружить, это выгодно!</p>
+    <p class="footer__discount">Скидка 10% для друзей из социальных сетей.</p>
   </footer>
 </body>
 
