--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <header class="main__header">
-    <a class="main__header__logo">
+    <a class="main__header-logo">
       <img src="img/logo.svg" width="160" height="65" alt="logotype" />
     </a>
     <nav class="navigation">
@@ -24,7 +24,7 @@
       </ul>
     </nav>
     <a class="basket" href="blank.html">Корзина</a>
-    <section>
+    <section class="slider">
       <h2>Слайдер</h2>
       <p class="slider__slogan">
         Долго, дорого,<br />
@@ -43,28 +43,28 @@
     <section class="offers">
       <h2>Предложения</h2>
       <ul class="offers__list">
-        <li class="offers__list__item">
+        <li class="offers__list-item">
           <h3>Веб-сайты</h3>
           <img src="img/all-sites.png" width="300" height="146" alt="sites" />
-          <p class="offers__list__item__text">
+          <p class="offers__list-item-text">
             Мир никогда не будет прежним<br />
             после того как увидит ваш сайт!
           </p>
           <a class="button button--red" href="blank.html">Заказать</a>
         </li>
-        <li class="offers__list__item">
+        <li class="offers__list-item">
           <h3>Приложения</h3>
           <img src="img/apps.png" width="300" height="146" alt="apps" />
-          <p class="offers__list__item__text">
+          <p class="offers__list-item-text">
             Покорите топ-10 приложений<br />
             в AppStore и Google Play
           </p>
           <a class="button button--green" href="blank.html">Заказать</a>
         </li>
-        <li class="offers__list__item">
+        <li class="offers__list-item">
           <h3>Презентации</h3>
           <img src="img/presentations.png" width="300" height="146" alt="presentations" />
-          <p class="offers__list__item__text">
+          <p class="offers__list-item-text">
             Вы даже не подозреваете,<br />
             насколько вы изумительны!
           </p>
@@ -83,25 +83,25 @@
         превыше креатива. Работаем не покладая рук, как роботы.
       </p>
       <p class="description__advantages">выполняем заказы на разработку</p>
-      <ul class="description__advantages__list">
-        <li class="description__advantages__list__item">Веб-сайтов любой сложности</li>
-        <li class="description__advantages__list__item">Мобильных приложений для iOS и Android</li>
-        <li class="description__advantages__list__item">Слайдшоу и видео для корпоративных презентаций</li>
+      <ul class="description__advantages-list">
+        <li class="description__advantages-list-item">Веб-сайтов любой сложности</li>
+        <li class="description__advantages-list-item">Мобильных приложений для iOS и Android</li>
+        <li class="description__advantages-list-item">Слайдшоу и видео для корпоративных презентаций</li>
       </ul>
       <p><img src="img/nerds-illustration.png" width="360" height="208" alt="nerds-illustration" /></p>
-      <p class="description__advantages__quality">С 2004 года любим точность во всём:</p>
-      <ul class="description__advantages__quality__list">
-        <li class="description__advantages__quality__list__item">
-          <p class="quality__list__item__numbers">146<span class="quality__list__item__percent">%</span></p>
-          <p class="quality__list__item__text">Уровень самоотдачи</p>
+      <p class="description__advantages-quality">С 2004 года любим точность во всём:</p>
+      <ul class="description__advantages-quality-list">
+        <li class="description__advantages-quality-list-item">
+          <p class="quality__list-item-numbers">146<span class="quality__list-item-percent">%</span></p>
+          <p class="quality__list-item-text">Уровень самоотдачи</p>
         </li>
-        <li class="description__advantages__quality__list__item">
-          <p class="quality__list__item__numbers">100<span class="quality__list__item__percent">%</span></p>
-          <p class="quality__list__item__text">Соблюдение сроков</p>
+        <li class="description__advantages-quality-list-item">
+          <p class="quality__list-item-numbers">100<span class="quality__list-item-percent">%</span></p>
+          <p class="quality__list-item-text">Соблюдение сроков</p>
         </li>
-        <li class="description__advantages__quality__list__item">
-          <p class="quality__list__item__numbers">50<span class="quality__list__item__percent">%</span></p>
-          <p class="quality__list__item__text">Минимальная предоплата</p>
+        <li class="description__advantages-quality-list-item">
+          <p class="quality__list-item-numbers">50<span class="quality__list-item-percent">%</span></p>
+          <p class="quality__list-item-text">Минимальная предоплата</p>
         </li>
       </ul>
     </section>
@@ -150,17 +150,17 @@
     <h2>Контакты</h2>
     <ul class="social__list">
       <a href="#">
-        <li class="social__list__item">
+        <li class="social__list-item">
           <img src="img/vk-icon.svg" width="21" height="15" alt="vk" />
         </li>
       </a>
       <a href="#">
-        <li class="social__list__item">
+        <li class="social__list-item">
           <img src="img/fb-icon.svg" width="12" height="22" alt="facebook" />
         </li>
       </a>
       <a href="#">
-        <li class="social__list__item">
+        <li class="social__list-item">
           <img src="img/inst-icon.svg" width="21" height="21" alt="instagram" />
         </li>
       </a>
