--- a/catalog.html
+++ b/catalog.html
@@ -13,7 +13,7 @@
 <body>
   <header class="main__header">
     <a class="main__header-logo" href="index.html">
-      <img src="img/logo.svg" width="160" height="65" alt="logotype" />
+      <img class="main__header-logo-img" src="img/logo.svg" alt="logotype" />
     </a>
     <nav class="navigation">
       <ul class="navigation__menu">
@@ -23,7 +23,7 @@
         <li><a href="blank.html">Контакты</a></li>
       </ul>
     </nav>
-    <a class="basket" href="blank.html">Корзина</a>
+    <a class="cart" href="blank.html">Корзина</a>
   </header>
   <main class="main__content">
     <h1 class="page__title">Магазин готовых шаблонов</h1>
@@ -77,8 +77,8 @@
               <label for="filter-gallery">Галерея</label>
             </li>
             <li>
-              <input type="checkbox" name="basket" id="filter-basket" />
-              <label for="filter-basket">Корзина</label>
+              <input type="checkbox" name="cart" id="filter-cart" />
+              <label for="filter-cart">Корзина</label>
             </li>
           </ul>
         </fieldset>
@@ -86,7 +86,7 @@
       </form>
     </section>
     <section class="sort__selection">
-      <h2 class="sort__selection__title">Сортировать:</h2>
+      <h2 class="sort__selection-title">Сортировать:</h2>
       <ul>
         <li>
           <button class="button--sort--current">По цене</button>
@@ -107,7 +107,7 @@
             Строка браузера
           </p>
           <a href="#">
-            <img src="img/img-sedona.jpg" width="359" height="578" alt="Sedona" />
+            <img class="filter__result-list-item-img" src="img/img-sedona.jpg" alt="Sedona" />
           </a>
           <section class="filter__result-list-item-details">
             <a class="filter__result-list-item-details-buy" href="#">Sedona</a>
@@ -120,7 +120,7 @@
             Строка браузера
           </p>
           <a href="#">
-            <img src="img/img-pink.jpg" width="358" height="578" alt="Pink" />
+            <img class="filter__result-list-item-img" src="img/img-pink.jpg" alt="Pink" />
           </a>
           <section class="filter__result-list-item-details">
             <a class="filter__result-list-item-details-buy" href="#">Pink app</a>
@@ -133,7 +133,7 @@
             Строка браузера
           </p>
           <a href="#">
-            <img src="img/img-borodinsky.jpg" width="358" height="578" alt="Borodinsky" />
+            <img class="filter__result-list-item-img" src="img/img-borodinsky.jpg" alt="Borodinsky" />
           </a>
           <section class="filter__result-list-item-details">
             <a class="filter__result-list-item-details-buy" href="#">Barbershop</a>
@@ -146,7 +146,7 @@
             Строка браузера
           </p>
           <a href="#">
-            <img src="img/img-mishka.jpg" width="358" height="578" alt="Mishka" />
+            <img class="filter__result-list-item-img" src="img/img-mishka.jpg" alt="Mishka" />
           </a>
           <section class="filter__result-list-item-details">
             <a class="filter__result-list-item-details-buy" href="#">Mishka</a>
@@ -159,7 +159,7 @@
             Строка браузера
           </p>
           <a href="#">
-            <img src="img/img-aplus.jpg" width="359" height="578" alt="Aplus" />
+            <img class="filter__result-list-item-img" src="img/img-aplus.jpg" alt="Aplus" />
           </a>
           <section class="filter__result-list-item-details">
             <a class="filter__result-list-item-details-buy" href="#">A Plus</a>
@@ -172,7 +172,7 @@
             Строка браузера
           </p>
           <a href="#">
-            <img src="img/img-kvast.jpg" width="359" height="578" alt="Kvast" />
+            <img class="filter__result-list-item-img" src="img/img-kvast.jpg" alt="Kvast" />
           </a>
           <section class="filter__result-list-item-details">
             <a class="filter__result-list-item-details-buy" href="#">Кваст</a>
@@ -202,7 +202,7 @@
   </main>
   <section class="map">
     <h2>Карта</h2>
-    <img src="img/map.png" widht="1440" height="416" alt="map" />
+    <img class="map__img" src="img/map.png" alt="map" />
   </section>
   <section class="contacts">
     <h3 class="contacts__title">Nёrds Design Studio</h3>
@@ -221,17 +221,17 @@
     <ul class="social__list">
       <a href="#">
         <li class="social__list-item">
-          <img src="img/vk-icon.svg" width="21" height="15" alt="vk" />
+          <img class="social__list-item-vk" src="img/vk-icon.svg" alt="vk" />
         </li>
       </a>
       <a href="#">
         <li class="social__list-item">
-          <img src="img/fb-icon.svg" width="12" height="22" alt="facebook" />
+          <img class="social__list-item-facebook" src="img/fb-icon.svg" alt="facebook" />
         </li>
       </a>
       <a href="#">
         <li class="social__list-item">
-          <img src="img/inst-icon.svg" width="21" height="21" alt="instagram" />
+          <img class="social__list-item-instagram" src="img/inst-icon.svg" alt="instagram" />
         </li>
       </a>
     </ul>
