--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <header class="main__header">
     <a class="main__header-logo">
-      <img src="img/logo.svg" width="160" height="65" alt="logotype" />
+      <img class="main__header-logo-img" src="img/logo.svg" alt="logotype" />
     </a>
     <nav class="navigation">
       <ul class="navigation__menu">
@@ -132,7 +132,7 @@
     </section>
     <section class="map">
       <h2>Карта</h2>
-      <img src="img/map.png" widht="1440" height="416" alt="map" />
+      <img class="map__img"  src="img/map.png" alt="map" />
     </section>
     <section class="contacts">
       <h3 class="contacts__title">Nёrds Design Studio</h3>
@@ -151,17 +151,17 @@
     <ul class="social__list">
       <a href="#">
         <li class="social__list-item">
-          <img src="img/vk-icon.svg" width="21" height="15" alt="vk" />
+          <img class="social__list-item-vk" src="img/vk-icon.svg" alt="vk" />
         </li>
       </a>
       <a href="#">
         <li class="social__list-item">
-          <img src="img/fb-icon.svg" width="12" height="22" alt="facebook" />
+          <img class="social__list-item-facebook" src="img/fb-icon.svg" alt="facebook" />
         </li>
       </a>
       <a href="#">
         <li class="social__list-item">
-          <img src="img/inst-icon.svg" width="21" height="21" alt="instagram" />
+          <img class="social__list-item-instagram" src="img/inst-icon.svg" alt="instagram" />
         </li>
       </a>
     </ul>
