--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
 
 <head>
   <meta charset="utf-8">
   <title>Html Academy: Нёрдс</title>
   <link rel="icon" href="favicon.ico" />
+  <link rel="icon" href="img/favicon.svg" type="image/svg+xml">
   <link rel="manifest" href="manifest.webmanifest" />
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
@@ -12,161 +13,150 @@
 
 <body>
   <header class="main__header">
-    <a class="main__header-logo">
-      <img class="main__header-logo-img" src="img/logo.svg" alt="logotype" />
-    </a>
-    <nav class="navigation">
+    <nav class="navigation center">
+      <a class="main__header-logo">
+        <img class="main__header-logo-img" src="img/logo.svg" alt="logo" />
+      </a>
       <ul class="navigation__menu">
-        <li><a href="blank.html">Студия</a></li>
-        <li><a href="blank.html">Клиенты</a></li>
-        <li><a href="catalog.html">Магазин</a></li>
-        <li><a href="blank.html">Контакты</a></li>
+        <li class="navigation__menu-item"><a class="navigation__menu-item-link" href="blank.html">Студия</a></li>
+        <li class="navigation__menu-item"><a class="navigation__menu-item-link" href="blank.html">Клиенты</a></li>
+        <li class="navigation__menu-item"><a class="navigation__menu-item-link" href="catalog.html">Магазин</a></li>
+        <li class="navigation__menu-item"><a class="navigation__menu-item-link" href="blank.html">Контакты</a></li>
       </ul>
+      <a class="navigation__menu-item-link cart" href="blank.html">Корзина</a>
     </nav>
-    <a class="basket" href="blank.html">Корзина</a>
-    <section class="slider">
-      <h2>Слайдер</h2>
-      <p class="slider__slogan">
-        Долго, дорого,<br />
-        скрупулезно.
-      </p>
-      <p class="slider__text">
-        Математически выверенный дизайн<br />
-        для вашего сайта или мобильного приложения.
-      </p>
-      <a class="button button--red" href="blank.html">Узнать больше</a>
-      <img src="img/slider.png" width="760" height="431" alt="animation" />
-    </section>
   </header>
-  <main class="main__content">
-    <h1>Нёрдс — дизайн-студия</h1>
+
+  <main>
+    <section class="slider">
+      <ul class="slider__list center">
+        <li class="slider__list-item active">
+          <p class="slider__list-item-slogan">Долго, дорого,<br />скрупулезно.</p>
+          <p class="slider__list-item-text">Математически выверенный дизайн<br />для вашего сайта или мобильного
+            приложения.</p>
+          <a class="button button--red" href="blank.html">Узнать больше</a>
+        </li>
+        <li class="slider__list-item">
+          <p class="slider__list-item-slogan">Любим математику как никто другой.</p>
+          <p class="slider__list-item-text">Никакого креатива, только математические формулы<br>для расчета идеальных
+            пропорций.</p>
+          <a class="button button--red" href="blank.html">Узнать больше</a>
+        </li>
+        <li class="slider__list-item">
+          <p class="slider__list-item-slogan">Долго, дорого,<br />скрупулезно.</p>
+          <p class="slider__list-item-text">Работать днем, как все? Мы против этого.<br>Ближе к полуночи работа только
+            начинается.</p>
+          <a class="button button--red" href="blank.html">Узнать больше</a>
+        </li>
+      </ul>
+    </section>
     <section class="offers">
-      <h2>Предложения</h2>
-      <ul class="offers__list">
+      <ul class="offers__list center">
         <li class="offers__list-item">
-          <h3>Веб-сайты</h3>
-          <img src="img/all-sites.png" width="300" height="146" alt="sites" />
-          <p class="offers__list-item-text">
-            Мир никогда не будет прежним<br />
-            после того как увидит ваш сайт!
-          </p>
+          <img class="offers__list-item-img" src="img/all-sites.png" alt="sites" />
+          <h3 class="offers__list-item-title">Веб-сайты</h3>
+          <p class="offers__list-item-text">Мир никогда не будет прежним<br />после того как увидит ваш сайт!</p>
           <a class="button button--red" href="blank.html">Заказать</a>
         </li>
         <li class="offers__list-item">
-          <h3>Приложения</h3>
-          <img src="img/apps.png" width="300" height="146" alt="apps" />
-          <p class="offers__list-item-text">
-            Покорите топ-10 приложений<br />
-            в AppStore и Google Play
-          </p>
+          <img class="offers__list-item-img" src="img/apps.png" alt="apps" />
+          <h3 class="offers__list-item-title">Приложения</h3>
+          <p class="offers__list-item-text">Покорите топ-10 приложений<br />в AppStore и Google Play</p>
           <a class="button button--green" href="blank.html">Заказать</a>
         </li>
         <li class="offers__list-item">
-          <h3>Презентации</h3>
-          <img src="img/presentations.png" width="300" height="146" alt="presentations" />
-          <p class="offers__list-item-text">
-            Вы даже не подозреваете,<br />
-            насколько вы изумительны!
-          </p>
+          <img class="offers__list-item-img" src="img/presentations.png" alt="presentations" />
+          <h3 class="offers__list-item-title">Презентации</h3>
+          <p class="offers__list-item-text">Вы даже не подозреваете,<br />насколько вы изумительны!</p>
           <a class="button button--yellow" href="blank.html">Заказать</a>
         </li>
       </ul>
     </section>
     <section class="description">
-      <h2>Описание</h2>
-      <p class="description__slogan">
-        Мы — маленькая, но гордая<br />
-        дизайн-студия из Краснодара
-      </p>
-      <p class="description__text">
-        Исповедуем принципы минимализма и чистоты. Ставим математический расчёт<br />
-        превыше креатива. Работаем не покладая рук, как роботы.
-      </p>
-      <p class="description__advantages">выполняем заказы на разработку</p>
-      <ul class="description__advantages-list">
-        <li class="description__advantages-list-item">Веб-сайтов любой сложности</li>
-        <li class="description__advantages-list-item">Мобильных приложений для iOS и Android</li>
-        <li class="description__advantages-list-item">Слайдшоу и видео для корпоративных презентаций</li>
-      </ul>
-      <p><img src="img/nerds-illustration.png" width="360" height="208" alt="nerds-illustration" /></p>
-      <p class="description__advantages-quality">С 2004 года любим точность во всём:</p>
-      <ul class="description__advantages-quality-list">
-        <li class="description__advantages-quality-list-item">
-          <p class="quality__list-item-numbers">146<span class="quality__list-item-percent">%</span></p>
-          <p class="quality__list-item-text">Уровень самоотдачи</p>
-        </li>
-        <li class="description__advantages-quality-list-item">
-          <p class="quality__list-item-numbers">100<span class="quality__list-item-percent">%</span></p>
-          <p class="quality__list-item-text">Соблюдение сроков</p>
-        </li>
-        <li class="description__advantages-quality-list-item">
-          <p class="quality__list-item-numbers">50<span class="quality__list-item-percent">%</span></p>
-          <p class="quality__list-item-text">Минимальная предоплата</p>
-        </li>
-      </ul>
+      <div class="description__wrapper center">
+        <div>
+          <p class="description__slogan">Мы — маленькая, но гордая<br />дизайн-студия из Краснодара.</p>
+          <p class="description__text">
+            Исповедуем принципы минимализма и чистоты. Ставим математический расчёт<br />
+            превыше креатива. Работаем не покладая рук, как роботы.
+          </p>
+          <p class="description__advantages">Выполняем заказы на разработку:</p>
+          <ul class="description__advantages-list">
+            <li class="description__advantages-list-item">Веб-сайтов любой сложности</li>
+            <li class="description__advantages-list-item">Мобильных приложений для iOS и Android</li>
+            <li class="description__advantages-list-item">Слайдшоу и видео для корпоративных презентаций</li>
+          </ul>
+        </div>
+        <div>
+          <img class="description__logo" src="img/nerds-illustration.png" alt="nerds-illustration" />
+          <p class="description__advantages-quality">С 2004 года любим точность во всём:</p>
+          <dl class="description__advantages-quality-list">
+            <dt class="quality__list-item-text">Уровень самоотдачи</dt>
+            <dd class="quality__list-item-numbers">146<span class="quality__list-item-percent">%</span></dd>
+            <dt class="quality__list-item-text">Соблюдение сроков</dt>
+            <dd class="quality__list-item-numbers">100<span class="quality__list-item-percent">%</span></dd>
+            <dt class="quality__list-item-text">Минимальная предоплата</dt>
+            <dd class="quality__list-item-numbers">50<span class="quality__list-item-percent">%</span></dd>
+          </dl>
+        </div>
+      </div>
     </section>
     <section class="partners">
-      <h2>Партнёры</h2>
-      <ul class="partners__list">
-        <li>
+      <ul class="partners__list center">
+        <li class="partners__list-item">
           <a href="#">
-            <img src="img/htmlacademy.svg" width="199" height="68" alt="htmlacademy" />
+            <img class="partners__list-item-academy" src="img/htmlacademy.svg" alt="htmlacademy" />
           </a>
         </li>
-        <li>
+        <li class="partners__list-item">
           <a href="#">
-            <img src="img/borodinski.svg" width="209" height="90" alt="borodinski" />
+            <img class="partners__list-item-borodinski" src="img/borodinski.svg" alt="borodinski" />
           </a>
         </li>
-        <li>
+        <li class="partners__list-item">
           <a href="#">
-            <img src="img/pink.svg" width="185" height="52" alt="pink" />
+            <img class="partners__list-item-pink" src="img/pink.svg" alt="pink" />
           </a>
         </li>
-        <li>
+        <li class="partners__list-item">
           <a href="#">
-            <img src="img/mishka.svg" width="173" height="84" alt="mishka" />
+            <img class="partners__list-item-mishka" src="img/mishka.svg" alt="mishka" />
           </a>
         </li>
       </ul>
-    </section>
-    <section class="map">
-      <h2>Карта</h2>
-      <img class="map__img"  src="img/map.png" alt="map" />
-    </section>
-    <section class="contacts">
-      <h3 class="contacts__title">Nёrds Design Studio</h3>
-      <p class="contacts__address">
-        191186, Санкт-Петербург<br />
-        ул. Б. Конюшенная, д. 19/8
-      </p>
-      <p class="contacts__phone">
-        <a href="tel:+78122757575">тел. +7 (812) 275-75-75</a>
-      </p>
-      <a class="button button--red" href="blank.html">Напишите нам</a>
     </section>
   </main>
   <footer class="main__footer">
-    <h2>Контакты</h2>
-    <ul class="social__list">
-      <a href="#">
-        <li class="social__list-item">
-          <img class="social__list-item-vk" src="img/vk-icon.svg" alt="vk" />
-        </li>
-      </a>
-      <a href="#">
-        <li class="social__list-item">
-          <img class="social__list-item-facebook" src="img/fb-icon.svg" alt="facebook" />
-        </li>
-      </a>
-      <a href="#">
-        <li class="social__list-item">
-          <img class="social__list-item-instagram" src="img/inst-icon.svg" alt="instagram" />
-        </li>
-      </a>
-    </ul>
-    <p class="footer__offer">Давайте дружить, это выгодно!</p>
-    <p class="footer__discount">Скидка 10% для друзей из социальных сетей.</p>
+    <section class="contacts">
+      <div class="map__wrapper">
+        <img class="map__wrapper-img" src="img/map.png" alt="map" />
+      </div>
+      <div class="contacts__wrapper">
+        <p class="contacts__title">Nёrds Design Studio</p>
+        <p class="contacts__address">191186, Санкт-Петербург<br />ул. Б. Конюшенная, д. 19/8</p>
+        <p class="contacts__phone">тел. <a href="tel:+78122757575">+7 (812) 275-75-75</a></p>
+        <a class="button button--red" href="#">Напишите нам</a>
+      </div>
+    </section>
+    <section class="socials">
+      <div class="socials__wrapper center">
+        <ul class="socials__list">
+          <li class="socials__list-item socials__list-vk">
+            <a class="socials__list-item-link" href="#">Вконтакте</a>
+          </li>
+          <li class="socials__list-item socials__list-fb">
+            <a class="socials__list-item-link" href="#">Фейсбук</a>
+          </li>
+          <li class="socials__list-item socials__list-inst">
+            <a class="socials__list-item-link" href="#">Инстаграм</a>
+          </li>
+        </ul>
+        <div>
+          <p class="footer__offer">Давайте дружить, это выгодно!</p>
+          <p class="footer__discount">Скидка 10% для друзей из социальных сетей.</p>
+        </div>
+      </div>
+    </section>
   </footer>
 </body>
 
