--- a/index.html
+++ b/index.html
@@ -12,22 +12,21 @@
 </head>
 
 <body>
-  <header class="main__header">
-    <nav class="navigation center">
-      <a class="main__header-logo">
-        <img class="main__header-logo-img" src="img/logo.svg" alt="logo" />
-      </a>
-      <ul class="navigation__menu">
-        <li class="navigation__menu-item"><a class="navigation__menu-item-link" href="blank.html">Студия</a></li>
-        <li class="navigation__menu-item"><a class="navigation__menu-item-link" href="blank.html">Клиенты</a></li>
-        <li class="navigation__menu-item"><a class="navigation__menu-item-link" href="catalog.html">Магазин</a></li>
-        <li class="navigation__menu-item"><a class="navigation__menu-item-link" href="blank.html">Контакты</a></li>
-      </ul>
-      <a class="navigation__menu-item-link cart" href="blank.html">Корзина</a>
-    </nav>
-  </header>
-
-  <main>
+  <main class="main__content">
+    <header class="main__header">
+      <nav class="navigation center">
+        <a class="main__header-logo">
+          <img class="main__header-img" src="img/logo.svg" alt="logo" />
+        </a>
+        <ul class="navigation__menu">
+          <li class="navigation__menu-item"><a class="navigation__menu-item-link" href="blank.html">Студия</a></li>
+          <li class="navigation__menu-item"><a class="navigation__menu-item-link" href="blank.html">Клиенты</a></li>
+          <li class="navigation__menu-item"><a class="navigation__menu-item-link" href="catalog.html">Магазин</a></li>
+          <li class="navigation__menu-item"><a class="navigation__menu-item-link" href="blank.html">Контакты</a></li>
+        </ul>
+        <a class="navigation__menu-item-link cart" href="blank.html">Корзина</a>
+      </nav>
+    </header>
     <section class="slider">
       <ul class="slider__list center">
         <li class="slider__list-item active">
