--- a/catalog.html
+++ b/catalog.html
@@ -11,26 +11,25 @@
 </head>
 
 <body>
-  <header class="main__header">
-    <nav class="navigation center">
-      <a class="main__header-logo" href="index.html">
-        <img class="main__header-logo-img" src="img/logo.svg" alt="logo" />
-      </a>
-      <ul class="navigation__menu">
-        <li class="navigation__menu-item"><a class="navigation__menu-item-link" href="blank.html">Студия</a></li>
-        <li class="navigation__menu-item"><a class="navigation__menu-item-link" href="blank.html">Клиенты</a></li>
-        <li class="navigation__menu-item"><a class="navigation__menu-item-link" href="catalog.html">Магазин</a></li>
-        <li class="navigation__menu-item"><a class="navigation__menu-item-link" href="blank.html">Контакты</a></li>
-      </ul>
-      <a class="navigation__menu-item-link cart" href="blank.html">Корзина</a>
-    </nav>
-  </header>
-
   <main class="main__content">
-    <div class="page__title-wrapper">
-      <h1 class="page__title-text center">Магазин готовых шаблонов</h1>
+    <header class="main__header">
+      <nav class="navigation">
+        <a class="main__header-logo" href="index.html">
+          <img class="main__header-img" src="img/logo.svg" alt="logo" />
+        </a>
+        <ul class="navigation__menu">
+          <li class="navigation__menu-item"><a class="navigation__menu-item-link" href="blank.html">Студия</a></li>
+          <li class="navigation__menu-item"><a class="navigation__menu-item-link" href="blank.html">Клиенты</a></li>
+          <li class="navigation__menu-item"><a class="navigation__menu-item-link" href="catalog.html">Магазин</a></li>
+          <li class="navigation__menu-item"><a class="navigation__menu-item-link" href="blank.html">Контакты</a></li>
+        </ul>
+        <a class="navigation__menu-item-link cart" href="blank.html">Корзина</a>
+      </nav>
+    </header>
+    <div class="page-title-wrapper">
+      <h1 class="page-title-text">Магазин готовых шаблонов</h1>
     </div>
-    <div class="catalog__container center">
+    <div class="catalog-container">
       <section class="filter">
         <form method="get" action="https://echo.htmlacademy.ru">
           <fieldset class="filter__fieldset">
@@ -38,10 +37,10 @@
             <div class="filter-range-wrapper">
               <input type="range" name="cost" id="cost" step="100" min="0" max="15000" />
             </div>
-            <label for="price__before" class="filter__price-text">от</label>
-            <input class="filter__price-input" id="price__before" type="text" value="0" name="price_from">
-            <label for="price__after" class="filter__price-text">до</label>
-            <input class="filter__price-input" id="price__after" type="text" value="15000" name="price_to">
+            <label for="price-before" class="filter__price-text">от</label>
+            <input class="filter__price-input" id="price-before" type="text" value="0" name="price_from">
+            <label for="price-after" class="filter__price-text">до</label>
+            <input class="filter__price-input" id="price-after" type="text" value="15000" name="price_to">
           </fieldset>
           <fieldset class="filter__fieldset">
             <legend>Сетка:</legend>
@@ -88,89 +87,89 @@
           <button class="button button--grey" type="submit">Показать</button>
         </form>
       </section>
-      <section class="filter__result">
+      <section class="catalog">
         <div class="sort__selection">
           <p class="sort__selection-title">Сортировать:</p>
-          <a class="button--sort current" href="#">По цене</a>
-          <a class="button--sort" href="#">По типу</a>
-          <a class="button--sort" href="#">По названию</a>
+          <a class="sort__selection-link current" href="#">По цене</a>
+          <a class="sort__selection-link" href="#">По типу</a>
+          <a class="sort__selection-link" href="#">По названию</a>
         </div>
-        <ul class="filter__result-list">
-          <li class="filter__result-list-item">
+        <ul class="catalog-list">
+          <li class="catalog-list-item">
             <p>
               Строка браузера
             </p>
             <a href="#">
-              <img class="filter__result-list-item-img" src="img/img-sedona.jpg" alt="Sedona" />
+              <img class="catalog-list-item-img" src="img/img-sedona.jpg" alt="Sedona" />
             </a>
-            <div class="filter__result-list-item-details">
-              <a class="filter__result-list-item-details-buy" href="#">Sedona</a>
-              <p class="filter__result-list-item-details-text">Информационный сайт<br />для туристов</p>
+            <div class="catalog-list-item-details">
+              <a class="catalog-list-item-details-buy" href="#">Sedona</a>
+              <p class="catalog-list-item-details-text">Информационный сайт<br />для туристов</p>
               <a class="button button--red" href="#">9 900 &#8381</a>
             </div>
           </li>
-          <li class="filter__result-list-item">
+          <li class="catalog-list-item">
             <p>
               Строка браузера
             </p>
             <a href="#">
-              <img class="filter__result-list-item-img" src="img/img-pink.jpg" alt="Pink" />
+              <img class="catalog-list-item-img" src="img/img-pink.jpg" alt="Pink" />
             </a>
-            <div class="filter__result-list-item-details">
-              <a class="filter__result-list-item-details-buy" href="#">Pink app</a>
-              <p class="filter__result-list-item-details-text">Продуктовый лендинг<br />приложения для iOS и Android</p>
+            <div class="catalog-list-item-details">
+              <a class="catalog-list-item-details-buy" href="#">Pink app</a>
+              <p class="catalog-list-item-details-text">Продуктовый лендинг<br />приложения для iOS и Android</p>
               <a class="button button--red" href="#">9 900 &#8381</a>
             </div>
           </li>
-          <li class="filter__result-list-item">
+          <li class="catalog-list-item">
             <p>
               Строка браузера
             </p>
             <a href="#">
-              <img class="filter__result-list-item-img" src="img/img-borodinsky.jpg" alt="Borodinsky" />
+              <img class="catalog-list-item-img" src="img/img-borodinsky.jpg" alt="Borodinsky" />
             </a>
-            <div class="filter__result-list-item-details">
-              <a class="filter__result-list-item-details-buy" href="#">Barbershop</a>
-              <p class="filter__result-list-item-details-text">Сайт салона красоты.<br />Для мужчин, да.</p>
+            <div class="catalog-list-item-details">
+              <a class="catalog-list-item-details-buy" href="#">Barbershop</a>
+              <p class="catalog-list-item-details-text">Сайт салона красоты.<br />Для мужчин, да.</p>
               <a class="button button--red" href="#">9 900 &#8381</a>
             </div>
           </li>
-          <li class="filter__result-list-item">
+          <li class="catalog-list-item">
             <p>
               Строка браузера
             </p>
             <a href="#">
-              <img class="filter__result-list-item-img" src="img/img-mishka.jpg" alt="Mishka" />
+              <img class="catalog-list-item-img" src="img/img-mishka.jpg" alt="Mishka" />
             </a>
-            <div class="filter__result-list-item-details">
-              <a class="filter__result-list-item-details-buy" href="#">Mishka</a>
-              <p class="filter__result-list-item-details-text">Интернет-магазин<br />вязанных игрушек.</p>
+            <div class="catalog-list-item-details">
+              <a class="catalog-list-item-details-buy" href="#">Mishka</a>
+              <p class="catalog-list-item-details-text">Интернет-магазин<br />вязанных игрушек.</p>
               <a class="button button--red" href="#">9 900 &#8381</a>
             </div>
           </li>
-          <li class="filter__result-list-item">
+          <li class="catalog-list-item">
             <p>
               Строка браузера
             </p>
             <a href="#">
-              <img class="filter__result-list-item-img" src="img/img-aplus.jpg" alt="Aplus" />
+              <img class="catalog-list-item-img" src="img/img-aplus.jpg" alt="Aplus" />
             </a>
-            <div class="filter__result-list-item-details">
-              <a class="filter__result-list-item-details-buy" href="#">A Plus</a>
-              <p class="filter__result-list-item-details-text">Лендинг курсов повышения<br />квалификации</p>
+            <div class="catalog-list-item-details">
+              <a class="catalog-list-item-details-buy" href="#">A Plus</a>
+              <p class="catalog-list-item-details-text">Лендинг курсов повышения<br />квалификации</p>
               <a class="button button--red" href="#">9 900 &#8381</a>
             </div>
           </li>
-          <li class="filter__result-list-item">
+          <li class="catalog-list-item">
             <p>
               Строка браузера
             </p>
             <a href="#">
-              <img class="filter__result-list-item-img" src="img/img-kvast.jpg" alt="Kvast" />
+              <img class="catalog-list-item-img" src="img/img-kvast.jpg" alt="Kvast" />
             </a>
-            <div class="filter__result-list-item-details">
-              <a class="filter__result-list-item-details-buy" href="#">Кваст</a>
-              <p class="filter__result-list-item-details-text">Промо-сайт производителя<br />крафтового кваса</p>
+            <div class="catalog-list-item-details">
+              <a class="catalog-list-item-details-buy" href="#">Кваст</a>
+              <p class="catalog-list-item-details-text">Промо-сайт производителя<br />крафтового кваса</p>
               <a class="button button--red" href="#">9 900 &#8381</a>
             </div>
           </li>
@@ -205,7 +204,7 @@
       </div>
     </section>
     <section class="socials">
-      <div class="socials__wrapper center">
+      <div class="socials__wrapper">
         <ul class="socials__list">
           <li class="socials__list-item socials__list-vk">
             <a class="socials__list-item-link" href="#">Вконтакте</a>
